<resources>
    <string name="app_name">HereSDK SampleApp</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_title">Error</string>
    <string name="sandbox">Sandbox</string>
    <string name="live">Live</string>
    <string name="login">Login</string>
    <string name="title_activity_payment_options">PaymentOptionsActivity</string>
    <string name="title_activity_reader_connection">ReaderConnectionActivity</string>
    <string name="swipe_payment">Payment using Audio Jack Reader</string>
    <string name="emv_payment">Payment using EMV Reader</string>
    <string name="both_payments">Payment using both Audio Jack and EMV Reader</string>
    <string name="title_activity_swipe_payment">SwipePaymentActivity</string>
    <string name="audio_jack_reader_connect_msg">Please plug-in audio jack reader</string>
    <string name="audio_jack_reader_connected_msg">Audio Jack reader already connected. Please proceed further</string>
    <string name="emv_reader_connect_msg">Please connect to EMV Reader before proceeding to take payment</string>
    <string name="emv_reader_update_msg">Software on currently connected EMV Reader needs to be updated before taking payment</string>
    <string name="emv_reader_connected_msg">EMV Reader already connected. Please proceed further</string>
    <string name="emv_reader_connect_button_msg">Connect To EMV Reader</string>
    <string name="emv_reader_update_button_msg">Update Software on EMV Reader</string>
    <string name="emv_reader_disconnect_button_msg">Disconnect EMV Reader</string>
    <string name="reader_connect_proceed_msg">Proceed</string>
    <string name="error_initialize_msg">Failed to set AccessToken. Please try after clearing the data/cache of the application.</string>
    <string name="error_invalid_amount">Entered amount is invalid. Please enter the valid amount</string>
    <string name="title_activity_charge">ChargeActivity</string>
    <string name="title_activity_refund">RefundActivity</string>
    <string name="title_activity_vault">VaultActivity</string>
    <string name="amount_hint">Enter the Amount</string>
    <string name="button_charge">Take Payment</string>
    <string name="swipe_card">Please swipe the card</string>
    <string name="payment_complete">Payment Successful</string>
    <string name="payment_fail">Payment Failed</string>
    <string name="refund_complete">Refund Successful</string>
    <string name="refund_failed">Failed to Refund.</string>
    <string name="refund_retry_msg">Retry</string>
    <string name="refund_button_text">Do Refund</string>
    <string name="payment_finish_msg">Done</string>
    <string name="payment_processing_msg">Processing Payment...</string>
    <string name="initializing_processing_msg">Initializing SDK...</string>
    <string name="capturing_msg">Capturing...</string>
    <string name="multi_readers_both_connected_msg">Both Audio Jack and EMV Reader is connected.</string>
    <string name="multi_readers_audio_jack_connected_msg">Audio Jack Reader is connected and EMV Reader is not connected. If you want to connect EMV reader please click on below button to connect</string>
    <string name="multi_readers_emv_connected_msg">EMV reader is connected and Audio Jack reader is not connected. If you want to connect Audio Jack reader please plug it in</string>
    <string name="multi_readers_no_reader_connected">Looks like there is no reader connected. Please connect at least one reader before proceeding further.\n For Audio Jack reader please plug it in. \nIn case EMV reader please use the below button to connect to it.</string>
    <string name="active_reader_msg">Currently Active Reader: </string>
    <string name="active_reader_audio_jack">Audio Jack Reader</string>
    <string name="active_reader_emv">EMV Reader</string>
    <string name="change_active_reader_msg">Change Active Reader</string>
    <string name="select_reader_title">Select Reader</string>
    <string name="exit_dialog_title">Exit</string>
    <string name="exit_dialog_msg">Do you want to Exit?</string>
    <string name="title_activity_main">Switch Button Demo</string>
    <string name="dark">Change to Dark Theme</string>
    <string name="light">Change to Light Theme</string>
    <string name="add">Add</string>
    <string name="cheer">Cheer:</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="woohoo">woohoo</string>
    <string name="yeah">yeah</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="create">create</string>
    <string name="default_checked">Checked by default:</string>
    <string name="checked">checked</string>
    <string name="unchecked">unchecked</string>
    <string name="init_sdk_code">RetailSDK.initialize(Context context, RetailSDK.AppState appState)</string>
    <string name="init_merchant_code">RetailSDK.initializeMerchant(SdkCredential credentials, RetailSDK.MerchantInitializedCallback callback)</string>
    <string name="merchant_account">Merchant Account:</string>
    <string name="merchant_account_email"></string>
    <string name="connect_card_reader">Connect card reader</string>
    <string name="up_banner">SDK v2.x</string>
    <string name="device_find_connect">DeviceManager.searchAndConnectWithUI(ConnectionCallback callback)</string>
    <string name="device_connect_last">DeviceManager.connectToLastActiveReaderOrFindAnotherWithUI(ConnectionCallback callback)</string>
    <string name="run_transactions">Run transactions</string>
    <string name="run_more">Run more transactions</string>
    <string name="find_connect">Find &amp; Connect</string>
    <string name="create_invoice">new RetailInvoice(String currencyCode)</string>
    <string name="create_transaction">RetailSDK.getTransactionManager().createTransaction(RetailInvoice invoice TransactionManager.TransactionCallback callback)</string>
    <string name="go_back_setup">Go back to initial setup</string>
    <string name="accept_transaction">transaction.beginPayment(TransactionBeginOptions options)</string>
    <string name="provide_refund">Provide a Refund</string>
    <string name="no_thanks">No Thanks</string>
    <string name="concluding">This concludes the primary transaction flows \nfor payment and refund.</string>
    <string name="beginRefund">currentTransaction.beginRefund(Boolean cardPresent, BigDecimal amount)</string>
    <string name="void_auth">RetailSDK.voidAuthorization(String autId, RetailSDK.VoidAuthorizationHandler handler) </string>
    <string name="capture_auth">RetailSDK.captureAuthorization(String authId, String invoiceId, BigDecimal totalAmount, BigDecimal gratuityAmount, String currency, RetailSDK.CaptureAuthorizationHandler handler)</string>
    <string name="payment_options">Payment Options</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preferred_form_factors">Preferred Form Factors:</string>
    <string name="magnetic_swipe">Magnetic Swipe</string>
    <string name="chip">Chip</string>
    <string name="contactless">Contactless</string>
    <string name="secure_manual">Secure Manual</string>
    <string name="manual_card">Manual Card</string>
    <string name="close">Close</string>
    <string name="auth_capture">Auth/Capture</string>
    <string name="pay_only">PayOnly</string>
    <string name="vault_only">VaultOnly</string>
    <string name="vault_types">Choose Vault Type:</string>
    <string name="pay_and_vault">PayAndVault</string>
    <string name="show_prompt_in_card_reader">Prompt in reader</string>
    <string name="show_prompt_in_app">Prompt in app</string>
    <string name="tipping_on_reader">Tipping on reader</string>
    <string name="amount_based_tipping">Amount based tipping</string>
    <string name="enable_quick_chip">Enable Quick Chip</string>
    <string name="tag">Tag</string>
    <string name="customer_id">Customer Id</string>
    <string name="view_code">View Code</string>
    <string name="get_offline_status_code">RetailSDK.getTransactionManager().getOfflinePaymentStatus(OfflinePaymentStatusCallback callback)</string>
    <string name="replay_offline_transaction_code">RetailSDK.getTransactionManager().startReplayOfflineTxns (OfflinePaymentStatusCallback callback)</string>
    <string name="stop_replay_code">RetailSDK.getTransactionManager().stopReplayOfflineTxns (OfflinePaymentStatusCallback callback)</string>
    <string name="get_offline_status">Get offline status</string>
    <string name="stop_replay">Stop Replay</string>
    <string name="replay_offline_transaction">Replay Transaction</string>
    <string name="login_bt">Login to BT Account</string>
    <string name="offline_payment_successful">Offline Payment\nSuccessful</string>
    <string name="auto_connect_code">DeviceManager.scanAndAutoConnectToBluetoothReader(String readerName, ConnectionCallback callback)</string>
    <string name="demo_app">Demo App</string>
    <string name="sdk_v2_x">SDK v2.x</string>
    <string name="get_started">Get Started</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="init_sdk_title">Initialize SDK</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="init_merchant_title">Initialize merchant</string>
    <string name="connect_a_reader">Connect a reader</string>
    <string name="choose_one">Choose One</string>
    <string name="connect_to_last_title">Connect to last known reader</string>
    <string name="connect">Connect</string>
    <string name="auto_connect">Auto connect</string>
    <string name="connected">"Connected: "</string>
    <string name="payments">Payments</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="create_invoice_title">Create Invoice</string>
    <string name="add_invoice_item_title">Add Invoice Item</string>
    <string name="create_transaction_title">Create transaction</string>
    <string name="step_3">Step 3</string>
    <string name="accept_transaction_title">Accept transaction</string>
    <string name="step_4">Step 4</string>
    <string name="step_5">Step 5</string>
    <string name="offline_payments">Offline Payments</string>
    <string name="offline_status">Offline status</string>
    <string name="start_replay">Start replay</string>
    <string name="transaction_results">Transaction results</string>
    <string name="done">Done</string>
    <string name="edit_text_pref">editTextPreference</string>
    <string name="success_payment">Successful Payment</string>
    <string name="success_vault">Successful Vaulting</string>
    <string name="would_you_like_a_refund">Would you like a refund?</string>
    <string name="option_1">Option 1</string>
    <string name="go_back">Go back</string>
    <string name="issue_refund">Issue refund</string>
    <string name="skip_refund">Skip refund</string>
    <string name="what_next">What would you like to do next?</string>
    <string name="void_auth_text">Void Authorization</string>
    <string name="option_2">Option 2</string>
    <string name="capture_auth_text">Capture Authorization</string>
    <string name="authorization_amount">Authorization amount</string>
    <string name="title_activity_transaction_selection">TransactionSelection</string>
    <string name="transaction_selection_toolbar">Select a transaction</string>
    <string name="transaction_selection_vault">Vault</string>
    <string name="transaction_selection_vault_and_pay">Vault &amp; Pay</string>
    <string name="vault_and_pay_transaction_braintree_merchant_login">Braintree Merchant Login</string>
    <string name="vault_and_pay_transaction_pay">Vault &amp; Pay</string>
    <string name="vault_transaction_braintree_merchant_login">Braintree Merchant Login</string>
    <string name="vault_transaction">Vault</string>
</resources>