<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:stepview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/success_payment"
            android:textColor="@color/sdk_black"
            android:textSize="16sp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/big_greenarrow" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="Your authorization of $1 was successful"
                android:textColor="@color/sdk_black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/what_next" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/choose_one"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:textColor="@color/sdk_black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.paypal.heresdk.sampleapp.ui.StepView
                android:id="@+id/void_auth_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                stepview:button_text="@string/void_auth_text"
                stepview:code_text="@string/void_auth"
                stepview:title_text="@string/option_1"></com.paypal.heresdk.sampleapp.ui.StepView>

            <com.paypal.heresdk.sampleapp.ui.StepView
                android:id="@+id/capture_auth_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                stepview:button_text="@string/capture_auth_text"
                stepview:code_text="@string/capture_auth"
                stepview:title_text="@string/option_2"></com.paypal.heresdk.sampleapp.ui.StepView>


        </LinearLayout>
    </ScrollView>


</LinearLayout>

