<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stepview="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/success_payment"
            android:textColor="@color/sdk_black"
            android:textSize="16sp" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/big_greenarrow"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="Your payment of $1.50 was successful"
        android:textColor="@color/sdk_black"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/would_you_like_a_refund"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center"


        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_one"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/sdk_black"
        android:layout_margin="@dimen/activity_vertical_margin"
        />

    <com.paypal.heresdk.sampleapp.ui.StepView
        android:id="@+id/refund_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        stepview:title_text="@string/option_1"
        stepview:code_text="@string/beginRefund"
        stepview:button_text="@string/issue_refund"
        >

    </com.paypal.heresdk.sampleapp.ui.StepView>

    <TextView
        android:id="@+id/skip_refund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_refund"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/sdk_primary_dark_blue"
        android:clickable="true"
        android:onClick="onSkipRefundClicked"
        />

</LinearLayout>

