<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:stepview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.vaultTransaction.VaultTransaction"
    tools:showIn="@layout/activity_vault_transaction">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/braintree_merchant_login_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/begin_vault_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" >

            <com.paypal.heresdk.sampleapp.ui.StepView
                android:id="@+id/braintree_merchant_login_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                stepview:title_text="@string/step_1"
                stepview:button_text="@string/login"
                stepview:code_text="@string/vault_transaction_braintree_merchant_login"
                stepview:enabled="false"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/begin_vault_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/braintree_merchant_login_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="spread">

            <com.paypal.heresdk.sampleapp.ui.StepView
                android:id="@+id/begin_vault_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                stepview:button_text="@string/vault_transaction"
                stepview:code_text="@string/create_transaction_title"
                stepview:enabled="false"
                stepview:title_text="@string/step_2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>